tests/baselines/reference/nodeModulesAllowJs1(module=node18).errors.txt
error TS5109: Option 'moduleResolution' must be set to 'Node18' (or left unspecified) when option 'module' is set to 'Node18'.
index.cjs(15,22): error TS2792: Cannot find module './'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
index.cjs(17,22): error TS2792: Cannot find module './subfolder'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
index.cjs(18,22): error TS2792: Cannot find module './subfolder/'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
index.cjs(20,22): error TS2792: Cannot find module './subfolder2'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
index.cjs(21,22): error TS2792: Cannot find module './subfolder2/'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
index.cjs(23,22): error TS2792: Cannot find module './subfolder2/another'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
index.cjs(24,22): error TS2792: Cannot find module './subfolder2/another/'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
index.cjs(51,1): error TS8002: 'import ... =' can only be used in TypeScript files.
index.cjs(51,22): error TS2792: Cannot find module './'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
index.cjs(52,1): error TS8002: 'import ... =' can only be used in TypeScript files.
index.cjs(53,1): error TS8002: 'import ... =' can only be used in TypeScript files.
index.cjs(53,22): error TS2792: Cannot find module './subfolder'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
index.cjs(54,1): error TS8002: 'import ... =' can only be used in TypeScript files.
index.cjs(54,22): error TS2792: Cannot find module './subfolder/'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
index.cjs(55,1): error TS8002: 'import ... =' can only be used in TypeScript files.
index.cjs(56,1): error TS8002: 'import ... =' can only be used in TypeScript files.
index.cjs(56,22): error TS2792: Cannot find module './subfolder2'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
index.cjs(57,1): error TS8002: 'import ... =' can only be used in TypeScript files.
index.cjs(57,22): error TS2792: Cannot find module './subfolder2/'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
index.cjs(58,1): error TS8002: 'import ... =' can only be used in TypeScript files.
index.cjs(59,1): error TS8002: 'import ... =' can only be used in TypeScript files.
index.cjs(59,22): error TS2792: Cannot find module './subfolder2/another'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
index.cjs(60,1): error TS8002: 'import ... =' can only be used in TypeScript files.
index.cjs(60,22): error TS2792: Cannot find module './subfolder2/another/'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
index.cjs(61,1): error TS8002: 'import ... =' can only be used in TypeScript files.
index.cjs(75,21): error TS2792: Cannot find module './'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
index.cjs(77,21): error TS2792: Cannot find module './subfolder'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
index.cjs(78,21): error TS2792: Cannot find module './subfolder/'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
index.cjs(80,21): error TS2792: Cannot find module './subfolder2'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
index.cjs(81,21): error TS2792: Cannot find module './subfolder2/'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
index.cjs(83,21): error TS2792: Cannot find module './subfolder2/another'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
index.cjs(84,21): error TS2792: Cannot find module './subfolder2/another/'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
index.js(14,22): error TS2792: Cannot find module './'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
index.js(16,22): error TS2792: Cannot find module './subfolder'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
index.js(17,22): error TS2792: Cannot find module './subfolder/'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
index.js(19,22): error TS2792: Cannot find module './subfolder2'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
index.js(20,22): error TS2792: Cannot find module './subfolder2/'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
index.js(22,22): error TS2792: Cannot find module './subfolder2/another'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
index.js(23,22): error TS2792: Cannot find module './subfolder2/another/'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
index.js(50,1): error TS8002: 'import ... =' can only be used in TypeScript files.
index.js(50,22): error TS2792: Cannot find module './'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
index.js(51,1): error TS8002: 'import ... =' can only be used in TypeScript files.
index.js(52,1): error TS8002: 'import ... =' can only be used in TypeScript files.
index.js(52,22): error TS2792: Cannot find module './subfolder'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
index.js(53,1): error TS8002: 'import ... =' can only be used in TypeScript files.
index.js(53,22): error TS2792: Cannot find module './subfolder/'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
index.js(54,1): error TS8002: 'import ... =' can only be used in TypeScript files.
index.js(55,1): error TS8002: 'import ... =' can only be used in TypeScript files.
index.js(55,22): error TS2792: Cannot find module './subfolder2'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
index.js(56,1): error TS8002: 'import ... =' can only be used in TypeScript files.
index.js(56,22): error TS2792: Cannot find module './subfolder2/'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
index.js(57,1): error TS8002: 'import ... =' can only be used in TypeScript files.
index.js(58,1): error TS8002: 'import ... =' can only be used in TypeScript files.
index.js(58,22): error TS2792: Cannot find module './subfolder2/another'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
index.js(59,1): error TS8002: 'import ... =' can only be used in TypeScript files.
index.js(59,22): error TS2792: Cannot find module './subfolder2/another/'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
index.js(60,1): error TS8002: 'import ... =' can only be used in TypeScript files.
index.js(74,21): error TS2792: Cannot find module './'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
index.js(76,21): error TS2792: Cannot find module './subfolder'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
index.js(77,21): error TS2792: Cannot find module './subfolder/'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
index.js(79,21): error TS2792: Cannot find module './subfolder2'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
index.js(80,21): error TS2792: Cannot find module './subfolder2/'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
index.js(82,21): error TS2792: Cannot find module './subfolder2/another'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
index.js(83,21): error TS2792: Cannot find module './subfolder2/another/'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
index.mjs(14,22): error TS2792: Cannot find module './'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
index.mjs(16,22): error TS2792: Cannot find module './subfolder'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
index.mjs(17,22): error TS2792: Cannot find module './subfolder/'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
index.mjs(19,22): error TS2792: Cannot find module './subfolder2'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
index.mjs(20,22): error TS2792: Cannot find module './subfolder2/'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
index.mjs(22,22): error TS2792: Cannot find module './subfolder2/another'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
index.mjs(23,22): error TS2792: Cannot find module './subfolder2/another/'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
index.mjs(50,1): error TS8002: 'import ... =' can only be used in TypeScript files.
index.mjs(50,22): error TS2792: Cannot find module './'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
index.mjs(51,1): error TS8002: 'import ... =' can only be used in TypeScript files.
index.mjs(52,1): error TS8002: 'import ... =' can only be used in TypeScript files.
index.mjs(52,22): error TS2792: Cannot find module './subfolder'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
index.mjs(53,1): error TS8002: 'import ... =' can only be used in TypeScript files.
index.mjs(53,22): error TS2792: Cannot find module './subfolder/'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
index.mjs(54,1): error TS8002: 'import ... =' can only be used in TypeScript files.
index.mjs(55,1): error TS8002: 'import ... =' can only be used in TypeScript files.
index.mjs(55,22): error TS2792: Cannot find module './subfolder2'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
index.mjs(56,1): error TS8002: 'import ... =' can only be used in TypeScript files.
index.mjs(56,22): error TS2792: Cannot find module './subfolder2/'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
index.mjs(57,1): error TS8002: 'import ... =' can only be used in TypeScript files.
index.mjs(58,1): error TS8002: 'import ... =' can only be used in TypeScript files.
index.mjs(58,22): error TS2792: Cannot find module './subfolder2/another'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
index.mjs(59,1): error TS8002: 'import ... =' can only be used in TypeScript files.
index.mjs(59,22): error TS2792: Cannot find module './subfolder2/another/'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
index.mjs(60,1): error TS8002: 'import ... =' can only be used in TypeScript files.
index.mjs(74,21): error TS2792: Cannot find module './'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
index.mjs(76,21): error TS2792: Cannot find module './subfolder'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
index.mjs(77,21): error TS2792: Cannot find module './subfolder/'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
index.mjs(79,21): error TS2792: Cannot find module './subfolder2'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
index.mjs(80,21): error TS2792: Cannot find module './subfolder2/'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
index.mjs(82,21): error TS2792: Cannot find module './subfolder2/another'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
index.mjs(83,21): error TS2792: Cannot find module './subfolder2/another/'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?


!!! error TS5109: Option 'moduleResolution' must be set to 'Node18' (or left unspecified) when option 'module' is set to 'Node18'.
==== subfolder/index.js (0 errors) ====
    // cjs format file
    const x = 1;
    export {x};
==== subfolder/index.cjs (0 errors) ====
    // cjs format file
    const x = 1;
    export {x};
==== subfolder/index.mjs (0 errors) ====
    // esm format file
    const x = 1;
    export {x};
==== subfolder2/index.js (0 errors) ====
    // cjs format file
    const x = 1;
    export {x};
==== subfolder2/index.cjs (0 errors) ====
    // cjs format file
    const x = 1;
    export {x};
==== subfolder2/index.mjs (0 errors) ====
    // esm format file
    const x = 1;
    export {x};
==== subfolder2/another/index.js (0 errors) ====
    // esm format file
    const x = 1;
    export {x};
==== subfolder2/another/index.cjs (0 errors) ====
    // cjs format file
    const x = 1;
    export {x};
==== subfolder2/another/index.mjs (0 errors) ====
    // esm format file
    const x = 1;
    export {x};
==== index.js (32 errors) ====
    import * as m1 from "./index.js";
    import * as m2 from "./index.mjs";
    import * as m3 from "./index.cjs";
    import * as m4 from "./subfolder/index.js";
    import * as m5 from "./subfolder/index.mjs";
    import * as m6 from "./subfolder/index.cjs";
    import * as m7 from "./subfolder2/index.js";
    import * as m8 from "./subfolder2/index.mjs";
    import * as m9 from "./subfolder2/index.cjs";
    import * as m10 from "./subfolder2/another/index.js";
    import * as m11 from "./subfolder2/another/index.mjs";
    import * as m12 from "./subfolder2/another/index.cjs";
    // The next ones shouldn't all work - esm format files have no index resolution or extension resolution
    import * as m13 from "./";
                         ~~~~
!!! error TS2792: Cannot find module './'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
    import * as m14 from "./index";
    import * as m15 from "./subfolder";
                         ~~~~~~~~~~~~~
!!! error TS2792: Cannot find module './subfolder'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
    import * as m16 from "./subfolder/";
                         ~~~~~~~~~~~~~~
!!! error TS2792: Cannot find module './subfolder/'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
    import * as m17 from "./subfolder/index";
    import * as m18 from "./subfolder2";
                         ~~~~~~~~~~~~~~
!!! error TS2792: Cannot find module './subfolder2'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
    import * as m19 from "./subfolder2/";
                         ~~~~~~~~~~~~~~~
!!! error TS2792: Cannot find module './subfolder2/'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
    import * as m20 from "./subfolder2/index";
    import * as m21 from "./subfolder2/another";
                         ~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2792: Cannot find module './subfolder2/another'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
    import * as m22 from "./subfolder2/another/";
                         ~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2792: Cannot find module './subfolder2/another/'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
    import * as m23 from "./subfolder2/another/index";
    void m1;
    void m2;
    void m3;
    void m4;
    void m5;
    void m6;
    void m7;
    void m8;
    void m9;
    void m10;
    void m11;
    void m12;
    void m13;
    void m14;
    void m15;
    void m16;
    void m17;
    void m18;
    void m19;
    void m20;
    void m21;
    void m22;
    void m23;
    
    // These should _mostly_ work - `import = require` always desugars to require calls, which do have extension and index resolution (but can't load anything that resolves to esm!)
    import m24 = require("./");
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS8002: 'import ... =' can only be used in TypeScript files.
                         ~~~~
!!! error TS2792: Cannot find module './'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
    import m25 = require("./index");
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS8002: 'import ... =' can only be used in TypeScript files.
    import m26 = require("./subfolder");
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS8002: 'import ... =' can only be used in TypeScript files.
                         ~~~~~~~~~~~~~
!!! error TS2792: Cannot find module './subfolder'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
    import m27 = require("./subfolder/");
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS8002: 'import ... =' can only be used in TypeScript files.
                         ~~~~~~~~~~~~~~
!!! error TS2792: Cannot find module './subfolder/'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
    import m28 = require("./subfolder/index");
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS8002: 'import ... =' can only be used in TypeScript files.
    import m29 = require("./subfolder2");
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS8002: 'import ... =' can only be used in TypeScript files.
                         ~~~~~~~~~~~~~~
!!! error TS2792: Cannot find module './subfolder2'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
    import m30 = require("./subfolder2/");
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS8002: 'import ... =' can only be used in TypeScript files.
                         ~~~~~~~~~~~~~~~
!!! error TS2792: Cannot find module './subfolder2/'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
    import m31 = require("./subfolder2/index");
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS8002: 'import ... =' can only be used in TypeScript files.
    import m32 = require("./subfolder2/another");
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS8002: 'import ... =' can only be used in TypeScript files.
                         ~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2792: Cannot find module './subfolder2/another'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
    import m33 = require("./subfolder2/another/");
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS8002: 'import ... =' can only be used in TypeScript files.
                         ~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2792: Cannot find module './subfolder2/another/'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
    import m34 = require("./subfolder2/another/index");
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS8002: 'import ... =' can only be used in TypeScript files.
    void m24;
    void m25;
    void m26;
    void m27;
    void m28;
    void m29;
    void m30;
    void m31;
    void m32;
    void m33;
    void m34;
    
    // These shouldn't work - dynamic `import()` always uses the esm resolver, which does not have extension resolution
    const _m35 = import("./");
                        ~~~~
!!! error TS2792: Cannot find module './'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
    const _m36 = import("./index");
    const _m37 = import("./subfolder");
                        ~~~~~~~~~~~~~
!!! error TS2792: Cannot find module './subfolder'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
    const _m38 = import("./subfolder/");
                        ~~~~~~~~~~~~~~
!!! error TS2792: Cannot find module './subfolder/'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
    const _m39 = import("./subfolder/index");
    const _m40 = import("./subfolder2");
                        ~~~~~~~~~~~~~~
!!! error TS2792: Cannot find module './subfolder2'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
    const _m41 = import("./subfolder2/");
                        ~~~~~~~~~~~~~~~
!!! error TS2792: Cannot find module './subfolder2/'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
    const _m42 = import("./subfolder2/index");
    const _m43 = import("./subfolder2/another");
                        ~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2792: Cannot find module './subfolder2/another'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
    const _m44 = import("./subfolder2/another/");
                        ~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2792: Cannot find module './subfolder2/another/'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
    const _m45 = import("./subfolder2/another/index");
    // esm format file
    const x = 1;
    export {x};
==== index.cjs (32 errors) ====
    // ESM-format imports below should issue errors
    import * as m1 from "./index.js";
    import * as m2 from "./index.mjs";
    import * as m3 from "./index.cjs";
    import * as m4 from "./subfolder/index.js";
    import * as m5 from "./subfolder/index.mjs";
    import * as m6 from "./subfolder/index.cjs";
    import * as m7 from "./subfolder2/index.js";
    import * as m8 from "./subfolder2/index.mjs";
    import * as m9 from "./subfolder2/index.cjs";
    import * as m10 from "./subfolder2/another/index.js";
    import * as m11 from "./subfolder2/another/index.mjs";
    import * as m12 from "./subfolder2/another/index.cjs";
    // The next ones should _mostly_ work - cjs format files have index resolution and extension resolution (except for those which resolve to an esm format file)
    import * as m13 from "./";
                         ~~~~
!!! error TS2792: Cannot find module './'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
    import * as m14 from "./index";
    import * as m15 from "./subfolder";
                         ~~~~~~~~~~~~~
!!! error TS2792: Cannot find module './subfolder'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
    import * as m16 from "./subfolder/";
                         ~~~~~~~~~~~~~~
!!! error TS2792: Cannot find module './subfolder/'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
    import * as m17 from "./subfolder/index";
    import * as m18 from "./subfolder2";
                         ~~~~~~~~~~~~~~
!!! error TS2792: Cannot find module './subfolder2'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
    import * as m19 from "./subfolder2/";
                         ~~~~~~~~~~~~~~~
!!! error TS2792: Cannot find module './subfolder2/'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
    import * as m20 from "./subfolder2/index";
    import * as m21 from "./subfolder2/another";
                         ~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2792: Cannot find module './subfolder2/another'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
    import * as m22 from "./subfolder2/another/";
                         ~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2792: Cannot find module './subfolder2/another/'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
    import * as m23 from "./subfolder2/another/index";
    void m1;
    void m2;
    void m3;
    void m4;
    void m5;
    void m6;
    void m7;
    void m8;
    void m9;
    void m10;
    void m11;
    void m12;
    void m13;
    void m14;
    void m15;
    void m16;
    void m17;
    void m18;
    void m19;
    void m20;
    void m21;
    void m22;
    void m23;
    
    // These should _mostly_ work - `import = require` always desugars to require calls, which do have extension and index resolution (but can't load anything that resolves to esm!)
    import m24 = require("./");
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS8002: 'import ... =' can only be used in TypeScript files.
                         ~~~~
!!! error TS2792: Cannot find module './'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
    import m25 = require("./index");
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS8002: 'import ... =' can only be used in TypeScript files.
    import m26 = require("./subfolder");
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS8002: 'import ... =' can only be used in TypeScript files.
                         ~~~~~~~~~~~~~
!!! error TS2792: Cannot find module './subfolder'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
    import m27 = require("./subfolder/");
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS8002: 'import ... =' can only be used in TypeScript files.
                         ~~~~~~~~~~~~~~
!!! error TS2792: Cannot find module './subfolder/'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
    import m28 = require("./subfolder/index");
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS8002: 'import ... =' can only be used in TypeScript files.
    import m29 = require("./subfolder2");
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS8002: 'import ... =' can only be used in TypeScript files.
                         ~~~~~~~~~~~~~~
!!! error TS2792: Cannot find module './subfolder2'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
    import m30 = require("./subfolder2/");
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS8002: 'import ... =' can only be used in TypeScript files.
                         ~~~~~~~~~~~~~~~
!!! error TS2792: Cannot find module './subfolder2/'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
    import m31 = require("./subfolder2/index");
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS8002: 'import ... =' can only be used in TypeScript files.
    import m32 = require("./subfolder2/another");
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS8002: 'import ... =' can only be used in TypeScript files.
                         ~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2792: Cannot find module './subfolder2/another'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
    import m33 = require("./subfolder2/another/");
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS8002: 'import ... =' can only be used in TypeScript files.
                         ~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2792: Cannot find module './subfolder2/another/'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
    import m34 = require("./subfolder2/another/index");
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS8002: 'import ... =' can only be used in TypeScript files.
    void m24;
    void m25;
    void m26;
    void m27;
    void m28;
    void m29;
    void m30;
    void m31;
    void m32;
    void m33;
    void m34;
    
    // These shouldn't work - dynamic `import()` always uses the esm resolver, which does not have extension resolution
    const _m35 = import("./");
                        ~~~~
!!! error TS2792: Cannot find module './'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
    const _m36 = import("./index");
    const _m37 = import("./subfolder");
                        ~~~~~~~~~~~~~
!!! error TS2792: Cannot find module './subfolder'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
    const _m38 = import("./subfolder/");
                        ~~~~~~~~~~~~~~
!!! error TS2792: Cannot find module './subfolder/'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
    const _m39 = import("./subfolder/index");
    const _m40 = import("./subfolder2");
                        ~~~~~~~~~~~~~~
!!! error TS2792: Cannot find module './subfolder2'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
    const _m41 = import("./subfolder2/");
                        ~~~~~~~~~~~~~~~
!!! error TS2792: Cannot find module './subfolder2/'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
    const _m42 = import("./subfolder2/index");
    const _m43 = import("./subfolder2/another");
                        ~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2792: Cannot find module './subfolder2/another'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
    const _m44 = import("./subfolder2/another/");
                        ~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2792: Cannot find module './subfolder2/another/'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
    const _m45 = import("./subfolder2/another/index");
    // cjs format file
    const x = 1;
    export {x};
==== index.mjs (32 errors) ====
    import * as m1 from "./index.js";
    import * as m2 from "./index.mjs";
    import * as m3 from "./index.cjs";
    import * as m4 from "./subfolder/index.js";
    import * as m5 from "./subfolder/index.mjs";
    import * as m6 from "./subfolder/index.cjs";
    import * as m7 from "./subfolder2/index.js";
    import * as m8 from "./subfolder2/index.mjs";
    import * as m9 from "./subfolder2/index.cjs";
    import * as m10 from "./subfolder2/another/index.js";
    import * as m11 from "./subfolder2/another/index.mjs";
    import * as m12 from "./subfolder2/another/index.cjs";
    // The next ones should all fail - esm format files have no index resolution or extension resolution
    import * as m13 from "./";
                         ~~~~
!!! error TS2792: Cannot find module './'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
    import * as m14 from "./index";
    import * as m15 from "./subfolder";
                         ~~~~~~~~~~~~~
!!! error TS2792: Cannot find module './subfolder'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
    import * as m16 from "./subfolder/";
                         ~~~~~~~~~~~~~~
!!! error TS2792: Cannot find module './subfolder/'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
    import * as m17 from "./subfolder/index";
    import * as m18 from "./subfolder2";
                         ~~~~~~~~~~~~~~
!!! error TS2792: Cannot find module './subfolder2'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
    import * as m19 from "./subfolder2/";
                         ~~~~~~~~~~~~~~~
!!! error TS2792: Cannot find module './subfolder2/'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
    import * as m20 from "./subfolder2/index";
    import * as m21 from "./subfolder2/another";
                         ~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2792: Cannot find module './subfolder2/another'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
    import * as m22 from "./subfolder2/another/";
                         ~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2792: Cannot find module './subfolder2/another/'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
    import * as m23 from "./subfolder2/another/index";
    void m1;
    void m2;
    void m3;
    void m4;
    void m5;
    void m6;
    void m7;
    void m8;
    void m9;
    void m10;
    void m11;
    void m12;
    void m13;
    void m14;
    void m15;
    void m16;
    void m17;
    void m18;
    void m19;
    void m20;
    void m21;
    void m22;
    void m23;
    
    // These should _mostly_ work - `import = require` always desugars to require calls, which do have extension and index resolution (but can't load anything that resolves to esm!)
    import m24 = require("./");
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS8002: 'import ... =' can only be used in TypeScript files.
                         ~~~~
!!! error TS2792: Cannot find module './'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
    import m25 = require("./index");
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS8002: 'import ... =' can only be used in TypeScript files.
    import m26 = require("./subfolder");
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS8002: 'import ... =' can only be used in TypeScript files.
                         ~~~~~~~~~~~~~
!!! error TS2792: Cannot find module './subfolder'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
    import m27 = require("./subfolder/");
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS8002: 'import ... =' can only be used in TypeScript files.
                         ~~~~~~~~~~~~~~
!!! error TS2792: Cannot find module './subfolder/'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
    import m28 = require("./subfolder/index");
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS8002: 'import ... =' can only be used in TypeScript files.
    import m29 = require("./subfolder2");
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS8002: 'import ... =' can only be used in TypeScript files.
                         ~~~~~~~~~~~~~~
!!! error TS2792: Cannot find module './subfolder2'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
    import m30 = require("./subfolder2/");
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS8002: 'import ... =' can only be used in TypeScript files.
                         ~~~~~~~~~~~~~~~
!!! error TS2792: Cannot find module './subfolder2/'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
    import m31 = require("./subfolder2/index");
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS8002: 'import ... =' can only be used in TypeScript files.
    import m32 = require("./subfolder2/another");
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS8002: 'import ... =' can only be used in TypeScript files.
                         ~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2792: Cannot find module './subfolder2/another'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
    import m33 = require("./subfolder2/another/");
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS8002: 'import ... =' can only be used in TypeScript files.
                         ~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2792: Cannot find module './subfolder2/another/'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
    import m34 = require("./subfolder2/another/index");
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS8002: 'import ... =' can only be used in TypeScript files.
    void m24;
    void m25;
    void m26;
    void m27;
    void m28;
    void m29;
    void m30;
    void m31;
    void m32;
    void m33;
    void m34;
    
    // These shouldn't work - dynamic `import()` always uses the esm resolver, which does not have extension resolution
    const _m35 = import("./");
                        ~~~~
!!! error TS2792: Cannot find module './'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
    const _m36 = import("./index");
    const _m37 = import("./subfolder");
                        ~~~~~~~~~~~~~
!!! error TS2792: Cannot find module './subfolder'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
    const _m38 = import("./subfolder/");
                        ~~~~~~~~~~~~~~
!!! error TS2792: Cannot find module './subfolder/'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
    const _m39 = import("./subfolder/index");
    const _m40 = import("./subfolder2");
                        ~~~~~~~~~~~~~~
!!! error TS2792: Cannot find module './subfolder2'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
    const _m41 = import("./subfolder2/");
                        ~~~~~~~~~~~~~~~
!!! error TS2792: Cannot find module './subfolder2/'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
    const _m42 = import("./subfolder2/index");
    const _m43 = import("./subfolder2/another");
                        ~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2792: Cannot find module './subfolder2/another'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
    const _m44 = import("./subfolder2/another/");
                        ~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2792: Cannot find module './subfolder2/another/'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
    const _m45 = import("./subfolder2/another/index");
    
    // esm format file
    const x = 1;
    export {x};
==== package.json (0 errors) ====
    {
        "name": "package",
        "private": true,
        "type": "module"
    }
==== subfolder/package.json (0 errors) ====
    {
        "type": "commonjs"
    }
==== subfolder2/package.json (0 errors) ====
    {
    }
==== subfolder2/another/package.json (0 errors) ====
    {
        "type": "module"
    }